@@ -25,9 +25,9 @@ is(
     "Got all 3 short messages"
 );
 
-worker { is($w->write_message("aa" x PIPE_BUF), 3, "$$ Wrote 3 chunks") };
-worker { is($w->write_message("bb" x PIPE_BUF), 3, "$$ Wrote 3 chunks") };
-worker { is($w->write_message("cc" x PIPE_BUF), 3, "$$ Wrote 3 chunks") };
+worker { $w->write_message("aa" x PIPE_BUF) };
+worker { $w->write_message("bb" x PIPE_BUF) };
+worker { $w->write_message("cc" x PIPE_BUF) };
 
 sleep 2 if $^O eq 'MSWin32';
 
@@ -38,6 +38,24 @@ is(
     [sort @messages],
     [sort(('aa' x PIPE_BUF), ('bb' x PIPE_BUF), ('cc' x PIPE_BUF))],
     "Got all 3 long messages, not mangled or mixed"
+);
+
+cleanup();
+
+worker { $w->write_message("dd" x PIPE_BUF) };
+
+sleep 2 if $^O eq 'MSWin32';
+
+is(
+    $r->read_message(debug => 1),
+    {
+        message => ("dd" x PIPE_BUF),
+        # We are testing that we got 3 parts
+        parts => [2, 1 ,0],
+        pid => D(),
+        tid => D(),
+    },
+    "Got the pid, tid, message, and 3 parts were used"
 );
 
 cleanup();
